--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
       "cross-spawn@<7.0.5": ">=7.0.5",
       "happy-dom@<15.10.2": ">=15.10.2",
       "phin@<3.7.1": ">=3.7.1",
-      "elliptic@<=6.6.0": ">=6.6.1"
+      "elliptic@<=6.6.0": ">=6.6.1",
+      "base-x@<=3.0.10": ">=3.0.11",
+      "base-x@=4.0.0": ">=4.0.1"
     }
   },
   "manypkg": {
