--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
       "elliptic@<=6.6.0": ">=6.6.1",
       "esbuild@<=0.24.2": ">=0.25.0",
       "@babel/runtime@<7.26.10": ">=7.26.10",
-      "@babel/helpers@<7.26.10": ">=7.26.10"
+      "@babel/helpers@<7.26.10": ">=7.26.10",
+      "base-x@<=3.0.10": ">=3.0.11",
+      "base-x@=4.0.0": ">=4.0.1"
     }
   },
   "manypkg": {
